# GioJS

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  gio.toml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release.yml
benchmarks/: compression-baseline.md  memory-stability.md
benchmarks/memory-stability/: collect.js  run-benchmark.ps1  run-benchmark.sh
benchmarks/memory-stability/next-baseline/: package.json
benchmarks/memory-stability/next-baseline/app/: page.tsx
crates/giojs-assets/: Cargo.toml
crates/giojs-assets/src/: handler.rs
crates/giojs-cache/: Cargo.toml
crates/giojs-cache/src/: backend.rs  disk.rs  key.rs  lib.rs  memory.rs  singleflight.rs
crates/giojs-css/: Cargo.toml
crates/giojs-css/src/: critical.rs  error.rs  lib.rs  modules.rs  transform.rs
crates/giojs-font/: Cargo.toml
crates/giojs-font/src/: lib.rs
crates/giojs-i18n/: Cargo.toml
crates/giojs-i18n/src/: lib.rs
crates/giojs-image/: Cargo.toml
crates/giojs-image/src/: cache.rs  lib.rs  processor.rs
crates/giojs-plugin/: Cargo.toml
crates/giojs-plugin/src/: lib.rs
crates/giojs-prefetch/: Cargo.toml
crates/giojs-prefetch/src/: lib.rs
crates/giojs-ratelimit/: Cargo.toml
crates/giojs-ratelimit/src/: bucket.rs  lib.rs  store.rs
crates/giojs-router/: Cargo.toml
crates/giojs-router/src/: lib.rs  matcher.rs  trie.rs
crates/giojs-server/: Cargo.toml
crates/giojs-server/src/: config.rs  dev_overlay.rs  devtools.rs  ipc.rs  main.rs  metrics.rs  ws.rs  ws_ipc.rs  ws_registry.rs
docs/: clean-install-report.md  dependency-notes.md  known-issues.md  phase4-complete.md  phase5-complete.md  plugins.md
docs-site/: build.mjs  gio.toml  package-lock.json  package.json  tsconfig.json
docs-site/app/: globals.css  layout.tsx  page.tsx
docs-site/app/docs/: layout.tsx
docs-site/app/docs/adapters/: page.tsx
docs-site/app/docs/api/: page.tsx
docs-site/app/docs/architecture/: page.tsx
docs-site/app/docs/benchmarks/: page.tsx
docs-site/app/docs/boundary/: page.tsx
docs-site/app/docs/caching/: page.tsx
docs-site/app/docs/caching-layers/: page.tsx
docs-site/app/docs/cli/: page.tsx
docs-site/app/docs/components/: page.tsx
docs-site/app/docs/configuration/: page.tsx
docs-site/app/docs/contributing/: page.tsx
docs-site/app/docs/css/: page.tsx
docs-site/app/docs/deployment/: page.tsx
docs-site/app/docs/error-handling/: page.tsx
docs-site/app/docs/examples/: page.tsx
docs-site/app/docs/fetching-data/: page.tsx
docs-site/app/docs/file-conventions/: page.tsx
docs-site/app/docs/font-optimization/: page.tsx
docs-site/app/docs/functions/: page.tsx
docs-site/app/docs/i18n/: page.tsx
docs-site/app/releases/: page.tsx
docs-site/components/: CodeBlock.tsx  MobileNav.tsx  Sidebar.tsx
docs-site/public/: globals.css  site.webmanifest
docs/deployment/: README.md  docker.md  kubernetes.md  linux-systemd.md  windows-nssm.md
examples/auth-demo/: gio.config.ts
examples/auth-demo/app/: page.tsx
examples/basic-app/: gio.toml  package.json
examples/basic-app/app/: page.tsx
platform/giojs-darwin-arm64/: README.md  package.json
platform/giojs-darwin-x64/: README.md  package.json
platform/giojs-linux-arm64/: README.md  package.json
platform/giojs-linux-x64/: README.md  package.json
platform/giojs-win32-x64/: README.md  package.json
tests/fixtures/: next.config.js  nextjs-page.tsx
(+19 files in other folders)
